# bill

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
.github/worklows/: windows.yml
docs/: Doxyfile  Makefile  changelog.rst  conf.py  index.rst  installation.rst  introduction.rst
docs/dd/: zdd.rst
docs/sat/: cardinality.rst  encodings.rst  interface_methods.rst  solvers.rst  unsat_cores.rst
examples/: CMakeLists.txt
experiments/: CMakeLists.txt
include/: CMakeLists.txt
include/bill/dd/: zdd.hpp
include/bill/sat/: cardinality.hpp  incremental_totalizer_cardinality.hpp  solver.hpp  tseytin.hpp  types.hpp
include/bill/sat/interface/: abc_bsat2.hpp  common.hpp  z3.hpp
include/bill/sat/solver/: ghack.hpp  maple.hpp
include/bill/smt/: z3.hpp
include/bill/utils/: platforms.hpp
lib/: CMakeLists.txt
lib/cudd/: CMakeLists.txt  cudd_wrapper.hpp
lib/cudd/cplusplus/: cuddObj.cc  cuddObj.hh
lib/cudd/cudd/: CMakeLists.txt  cuddRef.c  cuddZddUtil.c
lib/cudd/util/: CMakeLists.txt
libs/: CMakeLists.txt
libs/sat_solvers/sat_solvers/: abc.hpp  ghack.hpp  glucose.hpp  glucose_syrup.hpp  maple.hpp  satoko.hpp
libs/sat_solvers/sat_solvers/abc/: Queue.h
libs/sat_solvers/sat_solvers/satoko/: act_var.h  heap.h  solver.h  types.h  watch_list.h
test/: CMakeLists.txt  catch2.hpp
test/dd/: cudd_zdd.cpp
test/sat/: cardinality.cpp  sat.cpp  solver_types.hpp  unsat_core_utils.cpp  unsat_cores.cpp
test/smt/: z3.cpp
tests/: CMakeLists.txt  catch2.hpp  run_tests.cpp  sat.cpp  test.cpp
tests/dd/: zdd.cpp
tests/sat/: sat.cpp
