# Distributed under the MIT License (See accompanying file /LICENSE)

if (NOT TARGET fmt)
  add_library(fmt INTERFACE)
  target_compile_definitions(fmt INTERFACE BILL_FMT_INTERNAL FMT_HEADER_ONLY)
  target_include_directories(fmt INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/fmt)
endif()

if (NOT TARGET cudd)
  add_library(cudd_includes INTERFACE)
  target_include_directories(cudd_includes INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/cudd)
  target_include_directories(cudd_includes INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/cudd/epd)
  target_include_directories(cudd_includes INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/cudd/mtr)
  target_include_directories(cudd_includes INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/cudd/st)
  target_include_directories(cudd_includes INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/cudd/cudd)
  add_subdirectory(cudd)
endif()